--- a/app/views/users/index.html.erb
+++ b/app/views/users/index.html.erb
@@ -1,39 +1,5 @@
-<h1>Listing users</h1>
-
-<table>
-  <tr>
-    <th>First name</th>
-    <th>Last name</th>
-    <th>Image</th>
-    <th>Wins</th>
-    <th>Losses</th>
-    <th>Draws</th>
-    <th>Email</th>
-    <th>Password digest</th>
-    <th>Win percentage</th>
-    <th></th>
-    <th></th>
-    <th></th>
-  </tr>
-
-<% @users.each do |user| %>
-  <tr>
-    <td><%= user.first_name %></td>
-    <td><%= user.last_name %></td>
-    <td><%= user.image %></td>
-    <td><%= user.wins %></td>
-    <td><%= user.losses %></td>
-    <td><%= user.draws %></td>
-    <td><%= user.email %></td>
-    <td><%= user.password_digest %></td>
-    <td><%= user.win_percentage %></td>
-    <td><%= link_to 'Show', user %></td>
-    <td><%= link_to 'Edit', edit_user_path(user) %></td>
-    <td><%= link_to 'Destroy', user, method: :delete, data: { confirm: 'Are you sure?' } %></td>
-  </tr>
-<% end %>
-</table>
-
-<br />
-
-<%= link_to 'New User', new_user_path %>
+<h1>Users</h1>
+ <% @users.each do |user| %>
+   <%= user.email %> 
+   <%= user.password_digest %> 
+ <% end %>
