--- a/app/views/games/show.html.erb
+++ b/app/views/games/show.html.erb
@@ -39,27 +39,18 @@
 
 <!-- I would love to make a hidden_field within the table below so that that there is an associated value with each cell. I can't work out the syntax to to do that. I can give it a value by inputting an integer where my empty string is, but I don't want that to appear on the page. Then you obviously need to send that value to an action inside the controller. -->  
 
+<div class="board">
+  <% @board.each_with_index do |square, index| %>
+    <% if square == 'X' %>
+      <%= image_tag 'cross.jpg', class: 'square-link' %>
+    <% elsif square == '0' %>
+      <%= image_tag 'nought.jpg', class: 'square-link'  %>
+    <% else %>
+      <%= link_to '', new_game_move_path(@game, cell_chosen: index), class: 'square-link' %>
+    <% end %>
+  <% end %>
+</div>
 
-<br />
-  <table>
-
-    <tr>
-        <td><%=link_to new_game_move_path(@game, cell_chosen: 0) do %><div></div><% end %></td>
-        <td><%=link_to new_game_move_path(@game, cell_chosen: 1) do %><div></div><% end %></td>
-        <td><%=link_to new_game_move_path(@game, cell_chosen: 2) do %><div></div><% end %></td>
-    </tr>
-    <tr>
-        <td><%=link_to new_game_move_path(@game, cell_chosen: 3) do %><div></div><% end %></td>
-        <td><%=link_to new_game_move_path(@game, cell_chosen: 4) do %><div></div><% end %></td>
-        <td><%=link_to new_game_move_path(@game, cell_chosen: 5) do %><div></div><% end %></td>
-    </tr>
-    <tr>
-        <td><%=link_to new_game_move_path(@game, cell_chosen: 6) do %><div></div><% end %></td>
-        <td><%=link_to new_game_move_path(@game, cell_chosen: 7) do %><div></div><% end %></td>
-        <td><%=link_to new_game_move_path(@game, cell_chosen: 8) do %><div></div><% end %></td>
-    </tr>
-
-  </table>
 
 <%#= link_to 'Edit', edit_game_path(@game) %> 
 <%#= link_to 'Back', games_path %>
