--- a/app/views/moves/show.html.erb
+++ b/app/views/moves/show.html.erb
@@ -16,5 +16,5 @@
 </p>
 
 
-<%= link_to 'Edit', edit_move_path(@move) %> |
+<%= link_to 'Edit', edit_game_move_path(@move.game, @move) %> |
 <%= link_to 'Back', moves_path %>
