--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -1,3 +1,13 @@
 // Place all the styles related to the Games controller here.
 // They will automatically be included in application.css.
 // You can use Sass (SCSS) here: http://sass-lang.com/
+.board{
+  width:50%;
+}
+
+.square-link{
+  display:inline-block;
+  width:200px;
+  height:200px;
+  border: 1px solid grey;
+}
