--- a/app/views/moves/_form.html.erb
+++ b/app/views/moves/_form.html.erb
@@ -1,4 +1,4 @@
-<%= form_for(@move) do |f| %>
+<%= form_for([@move.game, @move]) do |f| %>
   <% if @move.errors.any? %>
     <div id="error_explanation">
       <h2><%= pluralize(@move.errors.count, "error") %> prohibited this move from being saved:</h2>
