--- a/app/views/moves/index.html.erb
+++ b/app/views/moves/index.html.erb
@@ -15,8 +15,8 @@
     <td><%= move.player_id %></td>
     <td><%= move.symbol %></td>
     <td><%= move.cell_chosen %></td>
-    <td><%= link_to 'Show', move %></td>
-    <td><%= link_to 'Edit', edit_move_path(move) %></td>
+    <td><%= link_to 'Show', [@move.game, @move] %></td>
+    <td><%= link_to 'Edit', edit_game_move_path(@move.game, move) %></td>
     <td><%= link_to 'Destroy', move, method: :delete, data: { confirm: 'Are you sure?' } %></td>
   </tr>
 <% end %>
@@ -24,4 +24,4 @@
 
 <br />
 
-<%= link_to 'New Move', new_move_path %>
+<%= link_to 'New Move', new_game_move_path %>
