--- a/app/assets/stylesheets/games.css.scss
+++ b/app/assets/stylesheets/games.css.scss
@@ -129,6 +129,11 @@ a{
   color:white;
 }
 
+.newgamelink a{
+  width:100%;
+  text-align: center;
+}
+
 a:hover{
   color: rgba(181, 38, 34, 1.0);
 }
